# lab5_OOP

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imgui_setup.cpp  imgui_setup.h
libs/imgui/src/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp  rlImGui.cpp  rlImGui.h
src/: Circle.cpp  Circle.h  Element.cpp  Element.h  ElementIterator.cpp  ElementIterator.h  ElementsHistory.cpp  ElementsHistory.h  FigureBuilder.cpp  FigureBuilder.h  Group.cpp  Group.h  Menu.cpp  Menu.h  Rectangle.cpp  Rectangle.h  Window.cpp  Window.h  common.h
src/ButtonCommands/: ButtonCommand.h  ValueSetBC.h  bcommands.h
src/Commands/: ButtonCommand.h  SliderCommand.h  ValueSetBC.h
src/Elements/: Circle.cpp  Circle.h  Element.cpp  Element.h  Group.cpp  Group.h  Rectangle.cpp  Rectangle.h  elements.h
src/MenuObjects/: ButtonMO.cpp  ButtonMO.h  EditorMO.cpp  EditorMO.h  LabelMO.cpp  LabelMO.h  MenuObject.h  PreviewMO.cpp  PreviewMO.h  SliderMO.cpp  SliderMO.h  mobjects.h
